Move repeatable index to the left, so as not to overlap the field label (fixes #427)

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -19,7 +19,10 @@
 }
 .form-group-index
 {
-	margin: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-right: 0;
+	margin-left: -25px;
 	line-height: 30px;
 	position: absolute; // we need this so the label to its right is not indented
 }
